--- a/HTTP/index.html
+++ b/HTTP/index.html
@@ -5,14 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <!-- 服务器上没有..／ 路径 可以采用相对路径 或者绝对路径 ／ 指代的是当前服务器 -->
+  <!-- 服务器上没有../ 路径 可以采用相对路径 或者绝对路径 ／ 指代的是当前服务器 -->
   <!-- 不能通过 ../ 找服务器的上层路径 -->
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
   <!-- http 报文 -->
-  <button id="btn"></button>
+  <button id="btn">request</button>
   <script>
+    function xxx(data) {
+      console.log(data)
+    }
     btn.addEventListener('click', () => {
       // ajax 4步 cors纯后端允许跨域
       let xhr = new XMLHttpRequest() // axios fetch
@@ -20,9 +23,9 @@
       xhr.setRequestHeader('token', 'jw')
       xhr.responseType = 'json'
       xhr.onload = function () { // 状态4 并且服务端返回时2开头
-        console.log(typeof xhr.response)
+        console.log(xhr.response)
       }
-      xhr.send() // 放的数据 需要当前是post方法
+      xhr.send('name=123') // 放的数据 需要当前是post方法
       // let scriptEle = document.createElement('script')
       // scriptEle.src = 'http://localhost:3000/data?callback=xxx'
       // document.body.appendChild(scriptEle)
@@ -32,8 +35,7 @@
     // 跨域 协议 主机 端口 有一个不相等就是跨域
     // 跨域的解决方案有哪些 iframe window.name
     // nginx websocket (jsonp cors) http-proxy
-
-    // jsonp 我借助没有 跨域问题的标签 style img
+    // jsonp  我借助没有 跨域问题的标签 style img(pv uv点击数)  script （cdn）
   </script>
 </body>
 </html>
