--- a/HTTP/index.html
+++ b/HTTP/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Document1</title>
   <!-- 服务器上没有../ 路径 可以采用相对路径 或者绝对路径 ／ 指代的是当前服务器 -->
   <!-- 不能通过 ../ 找服务器的上层路径 -->
   <link rel="stylesheet" href="../style.css">
