--- a/koa-upload/index.html
+++ b/koa-upload/index.html
@@ -7,7 +7,11 @@
   <title>Document</title>
 </head>
 <body>
-  <form action="/form" method="POST">
+  <form action="/upload" method="POST" enctype="multipart/form-data">
+    username<input type="text" name="username"> <br>
+    password<input type="text" name="password"> <br>
+    <input type="file" name="avatar" multiple>
+    <button>sumbit</button>
   </form>
 </body>
 </html>
